--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-tailwindcss-datepicker": "^1.6.0",
-    "tailwindcss": "3.3.1"
+    "tailwind-datepicker-react": "^1.2.3",
+    "tailwindcss": "3.3.1",
+    "tw-elements": "^1.0.0-beta2"
   }
 }
