--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "tailwindcss": "3.3.1",
     "tw-elements": "^1.0.0-beta2",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^8.8.0"
   }
 }
