--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: "Create env file"
         run: |
-          echo "${{ secrets.ENV_FILE }}" > .env.local
+          echo "${{ secrets.ENV_FILE }}" > .env
 
       - name: Cache dependencies
         uses: actions/cache@v2
